# KUx

./: .gitignore  README.md  general_education.csv  pyproject.toml  requirements.txt
data/sample_documents/: kasetsart_cs_courses.csv  kasetsart_cs_overview.txt
docs/: COLAB_SETUP.md  KUx_Colab_End_to_End.ipynb
scripts/: build_vector_store.py  crawl_sites.py  run_chatbot.py  train_qwen.py
src/kux/: __init__.py  config.py
src/kux/chatbot/: app.py
src/kux/crawling/: site_crawler.py
src/kux/fine_tuning/: training.py
src/kux/rag/: ingest.py  pipeline.py
